feat: change pasport check cookies to bearer
